--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -170,5 +170,9 @@
   a {
     @include font($size: 12px, $weight: 400, $line-height: 24px);
     color: map-get($color_blue, 900);
+
+    &:hover{
+      cursor: pointer;
+    }
   }
 }
