--- a/assets/scss/pages/_contact.scss
+++ b/assets/scss/pages/_contact.scss
@@ -4,7 +4,7 @@
         padding: 100px 20px 0 20px;
     }
     &__wrp{
-        background-image: url(/assets/images/contact-bg.svg);
+        background-image : url(/assets/images/contact-bg.svg);
         background-repeat: no-repeat;
         background-position:100%;
         background-size: cover;
@@ -51,38 +51,84 @@
             }
 
             .contact-input{
-                @include flex($justify:center);
+                @include flex($justify:space-between);
                 @include mobile(){
                     @include flex($justify:center,$direction:column);
                 }
                 gap: 10px;
                 margin-bottom: 10px;
-                input{
-                    width: 50%;
-                    border-radius: 8px;
-                      padding: 10px 14px;
-                      border: 1px solid map-get($color_blue,100);
-                      outline: none;
-                      @include font($size:14px,$weight:400,$line-height:24px);
-                      color: map-get($color_blue,200);
-                      @include box-shadow($vertical:1px,$blur:2px);
-                      @include mobile(){
+                  .contact-items{
+                    width: 100%;
+                    @include flex($direction:column);
+                    gap: 6px;
+                    input{
                         width: 100%;
+                        border-radius: 8px;
+                          padding: 10px 14px;
+                          border: 1px solid map-get($color_blue,100);
+                          outline: none;
+                          @include font($size:14px,$weight:400,$line-height:24px);
+                          color: map-get($color_blue,200);
+                          @include box-shadow($vertical:1px,$blur:2px);
+                          @include mobile(){
+                            width: 100%;
+                          }
                       }
+                      #name-error{
+                        text-align: start;
+                        color: #F04438;
+                        @include font($size:12px,$weight:400,$line-height:16px);
+                        border: none;
+                        margin-bottom: 22px;
+                      }
+                      #email-error{
+                        text-align: start;
+                        color: #F04438;
+                        @include font($size:12px,$weight:400,$line-height:16px);
+                        border: none;
+                        margin-bottom: 22px;
+                      }
+                      #telephone-error{
+                        text-align: start;
+                        color: #F04438;
+                        @include font($size:12px,$weight:400,$line-height:16px);
+                        border: none;
+                        margin-bottom: 22px;
+                      }
+                      .error{
+                        border: 1px solid #F04438;
+                      }
+                    
                   }
             }
-            #textBox{
+            .textarea-items{
                 width: 100%;
-                border-radius: 8px;
-                padding: 10px 14px;
-                border: 1px solid map-get($color_blue,100);
-                outline: none;
-                @include font($size:14px,$weight:400,$line-height:24px);
-                color: map-get($color_blue,200);
-                @include box-shadow($vertical:1px,$blur:2px);
-                font-family: 'Poppins';
-                margin-bottom: 40px;
-              }
+                @include flex($direction:column);
+                gap: 6px;
+                #textBox{
+                    width: 100%;
+                    border-radius: 8px;
+                    padding: 10px 14px;
+                    border: 1px solid map-get($color_blue,100);
+                    outline: none;
+                    @include font($size:14px,$weight:400,$line-height:24px);
+                    color: map-get($color_blue,200);
+                    @include box-shadow($vertical:1px,$blur:2px);
+                    font-family: 'Poppins';
+                    margin-bottom: 40px;
+                  }
+                  #textBox-error{
+                    text-align: start;
+                    color: #F04438;
+                    @include font($size:12px,$weight:400,$line-height:16px);
+                    border: none;
+                    margin-bottom: 22px;
+                  }
+                  #textBox.error{
+                    border: 1px solid #F04438;
+                    margin-bottom: 0;
+                  }
+            }
               button{
                 padding: 16px 72px;
                 border-radius: 8px;
